// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table.sort renders sort icon correctly 1`] = `
<div
  class="QT-table-thead"
  style="width:400px;height:36px"
>
  <div
    class="QT-table-header-row"
    style="height:36px"
  >
    <div
      class="QT-table-cell QT-table-column-has-sorters"
      style="position:absolute;left:0;width:400px;height:36px"
      title=""
    >
      <div
        class="QT-table-column-sorters"
      >
        <span
          class="QT-table-column-title"
        >
          Name
        </span>
        <span
          class="QT-table-column-sorter QT-table-column-sorter-full"
        >
          <span
            class="QT-table-column-sorter-inner"
          >
            <span
              aria-label="caret-up"
              class="anticon anticon-caret-up QT-table-column-sorter-up"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="caret-up"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
              >
                <path
                  d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                />
              </svg>
            </span>
            <span
              aria-label="caret-down"
              class="anticon anticon-caret-down QT-table-column-sorter-down"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="caret-down"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
              >
                <path
                  d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                />
              </svg>
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table.sort should support defaultOrder in Column 1`] = `
<div
  class="QT-table-wrapper"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="QT-table QT-table-bordered"
      >
        <div
          class="QT-table-container"
        >
          <div
            class="QT-table-header"
            style="overflow: hidden; width: 400px;"
          >
            <div>
              <div
                class="QT-table-thead"
                style="width: 400px; height: 36px;"
              >
                <div
                  class="QT-table-header-row"
                  style="height: 36px;"
                >
                  <div
                    class="QT-table-cell QT-table-column-sort QT-table-column-has-sorters"
                    style="position: absolute; left: 0px; width: 400px; height: 36px;"
                    title=""
                  >
                    <div
                      class="QT-table-column-sorters"
                    >
                      <span
                        class="QT-table-column-title"
                      >
                        Age
                      </span>
                      <span
                        class="QT-table-column-sorter QT-table-column-sorter-full"
                      >
                        <span
                          class="QT-table-column-sorter-inner"
                        >
                          <span
                            aria-label="caret-up"
                            class="anticon anticon-caret-up QT-table-column-sorter-up active"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="caret-up"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="0 0 1024 1024"
                              width="1em"
                            >
                              <path
                                d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                              />
                            </svg>
                          </span>
                          <span
                            aria-label="caret-down"
                            class="anticon anticon-caret-down QT-table-column-sorter-down"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="caret-down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="0 0 1024 1024"
                              width="1em"
                            >
                              <path
                                d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                              />
                            </svg>
                          </span>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="table_special_aj7jq QT-table-tbody"
            style="position: relative; height: 364px; width: 400px; overflow: auto; will-change: unset; direction: ltr; overflow-x: hidden; overflow-y: hidden;"
          >
            <div
              style="height: 32px; width: 400px;"
            >
              <div
                class="QT-table-row-wrapper"
                style="position: absolute; left: 0px; top: 0px; height: 32px; width: 400px;"
              >
                <div
                  class="QT-table-row QT-table-row-level-0"
                  data-row-key="1"
                  style="height: 32px;"
                >
                  <div
                    class="QT-table-cell QT-table-column-sort QT-table__row-cell--with-flag"
                    style="position: absolute; left: 0px; width: 400px; height: 32px;"
                    title=""
                  >
                    1
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
